--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
 
     <img src="img/avatar-perfil.png" class="rounded-circle" width="150"  alt="avatar de brayan" srcset="">
 
-<p class="lead">Eu sou o aluno</p>
+<p class="lead">Eu sou a aluna Sthefanny Dos Santos Silva</p>
 
 <h1>Eu estou aprendendo programação</h1>
 
@@ -262,7 +262,7 @@ reflexão ética sobre a tecnologia.</p>
 
         <a href=""http://github.com/femaschetil"">github</a>
 
-        <p class="my-5 text-center">copyright 2024, produzido por aluno.</p>
+        <p class="my-5 text-center">copyright 2024, produzido por Sthefanny Dos Santos Silva</p>
 
 </footer>
 
