--- a/Index.html
+++ b/Index.html
@@ -109,8 +109,8 @@ reflexão ética sobre a tecnologia.</p>
             nossas vidas.</p>
         <img src="img/projeto-2.png" class="img-fluid w-100" alt="Projeto 2">
         <div class="modal -'footer'">
-            <a href="https://femascheti.github.io/tecnicas-computacionais-refletindo-sobre-ia">Ver projeto</a>
-            <a href="https://github.com/femascheti/tecnicas-computacionais-refletindo-sobre-ia">Ver codigo do projeto</a>
+            <a href="https://github.com/SthefannyS2/Projeto-5--terceiro-trimestre-.git">Ver projeto</a>
+            <a href="https://github.com/SthefannyS2/Projeto-5--terceiro-trimestre-.git">Ver codigo do projeto</a>
         </div>
     <button type="button" class="bnt bnt-link"data-bs-toogle="modal" data-bs-target="modal2">Veja o projeto</button>
     </div>
