--- a/Index.html
+++ b/Index.html
@@ -160,7 +160,7 @@ reflexão ética sobre a tecnologia.</p>
 <footer class="container">
     <h2>Entre em contato.</h2>
     <div>
-        <a href=""https://github.com/femaschetil"">github</a>
+        <a href="https://github.com/SthefannyS2/Projeto-5--terceiro-trimestre-.git">github</a>
         <p class="my-5 text-center">copyright 2024, produzido por .</p>
 </footer>
 </body>
